samples/_failures_safe/1761532001_125625_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_97e63672.c: In function ‘main’:
./samples/SAFE/__tmp_97e63672.c:154:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  154 |         int u, v
      |         ^~~
./samples/SAFE/__tmp_97e63672.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_97e63672.c:154:9: error: expected declaration or statement at end of input
